<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".PosterDetails">

        <ImageView
            android:id="@+id/posterImageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_poster_height"
            android:contentDescription="@string/image_description"
            android:foreground="@drawable/gradient"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_16">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_placeholder"
                android:textAlignment="textStart"
                android:textColor="@color/titleColor"
                android:textSize="@dimen/title_size"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/padding_8">

                <RatingBar
                    android:id="@+id/rating_stars"
                    style="@style/RatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:stepSize="0.01" />

                <TextView
                    android:id="@+id/vote_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/number_of_votes_placeholder"
                    android:textColor="@color/voteCountColor" />

            </LinearLayout>

            <TextView
                android:id="@+id/releaseDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/calendar"
                android:drawablePadding="@dimen/padding_8"
                android:text="@string/date_placeholder"
                android:textColor="@color/titleColor" />

            <TextView
                android:id="@+id/original_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/language"
                android:drawablePadding="@dimen/padding_8"
                android:text="@string/language_placeholder"
                android:textColor="@color/titleColor" />

        </LinearLayout>

        <TextView
            android:id="@+id/overviewTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_16"
            android:scrollbars="vertical"
            android:text="@string/overview_placeholder"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/overview_size" />

    </LinearLayout>

</ScrollView>